# 2026-stock-monitor

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  instruction.md  pyproject.toml  run.sh  watchlist.md
.claude/: settings.local.json
.claude/skills/stock/: SKILL.md
.claude/skills/today/: SKILL.md
src/: anomaly.py  astock.py  calendar_events.py  config.py  fetcher.py  global_stock.py  hypothesis.py  llm.py  main.py  market.py  models.py  news.py  realtime.py  report.py
templates/: report.md.j2  today.md.j2
tests/: test_anomaly.py  test_astock.py  test_config.py  test_fetcher.py  test_global_stock.py  test_llm.py  test_market.py  test_models.py  test_news.py  test_predictive_anomaly.py  test_report_enhanced.py
