[project]
name = "stock-monitor"
version = "0.7.0"
description = "每日股票监控系统 (A股 + 美股 + 港股)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "akshare>=1.14.0",
    "mootdx>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
stock-monitor = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
